--- a/brainfactory.html
+++ b/brainfactory.html
@@ -418,6 +418,7 @@
                   <li class=" first"><a href="index.html">Home</a></li>
                   <li class=" first"><a href="brainfactory.html">Brainfactory workshops</a></li>
                   <li class=""><a href="program.html">Program</a></li>
+                  <li class=""><a href="speakers.html">Speakers</a></li>
                   <li class=""><a href="about-us.html">Meet the team</a></li>
                   <li class=""><a href="tickets.html">Tickets</a></li>
                   <li class=" last"><a href="why-attend.html">History</a></li>
