--- a/speakers.html
+++ b/speakers.html
@@ -741,6 +741,7 @@
         linkedin: "https://www.linkedin.com/in/anne-ketola-02629a2b6/",
         bio: "Anne is a linguist who specializes in cognitive accessibility and plain language. Her recent research has focused on the accessibility of contract language and design methods that support the comprehension of contracts. Ketola is the Principal Investigator in the Contract Language research project, conducted by the JARGONFREE research group at Tampere University, Finland. The project examines how complex and vague language used in supply chain contracts obscures the contract parties’ sustainability commitments.",
         sessions: [
+          { day: "Wednesday - BrainFactory Day", title: "Legal Design for Sustainability" },
           { day: "DAY 2 - Friday", title: "Can Contracts Save the World?" }
         ]
       },
