update NGO logos

--- a/index.html
+++ b/index.html
@@ -603,6 +603,7 @@
 		<p>We love collaborating with non-profits - Get in touch to join forces with us!</p>
 		<div class="logo-grid">
 
+			<a href="https://www.dot.legal/" target="_blank"><img src="images/collabs/Dot.-logo.jpg" alt="Dot"></a>
 			<a href="https://legaldesign-journal.com/" target="_blank"><img
 					src="images/collabs/Legal Design Journal.JPG" alt="Legal Design Journal"></a>
 			<a href="https://www.hiil.org/" target="_blank"><img src="images/collabs/HiiL_Logo color tagline.png"></a>
@@ -612,6 +613,8 @@
 					src="images/collabs/TUM_Logo_extern_mt_EN_RGB_neg_p(Christian Djeffal).png"></a>
 			<a href="https://www.iltanet.org/home" target=" _blank"><img src="images/collabs/ILTA-logo-full.svg"></a>
 			<a href="https://www.copenhagenlegaltech.dk/" target="_blank"><img src="images/collabs/clt.png"></a>
+			<a href="https://www.copenhagenlegaltech.dk/" target="_blank"><img
+					src="images/collabs/Copenhagen Legal Tech.png"></a>
 			<a href="https://juristiliitto.fi/" target="_blank"><img src="images/collabs/Juristiliitto.png"></a>
 			<a href="https://chancerylaneproject.org/" target="_blank"><img src="images/collabs/TCLP.png"></a>
 			<a href="https://www.vttresearch.com/en" target=" _blank"><img src="images/collabs/VTT_Orange_Logo.png"></a>
@@ -623,10 +626,15 @@
 			<a href="https://legaldesignsummit.com" target=" _blank"><img src="images/collabs/NJLDL-Logo-v1.png"></a>
 			<a href="https://oikeusministerio.fi/en/frontpage" target=" _blank"><img
 					src="images/collabs/OM_eng_RGB.png"></a>
-
+			<a href="https://www.uwasa.fi/en" target=" _blank"><img
+					src="images/collabs/University-of-Vaasa-Logo-EN-Small-Vertical-Greytxt.jpg"></a>
+			<a href="https://www.univ-antananarivo.mg/" target=" _blank"><img
+					src="images/collabs/Logo FDSP - Université d'Antananarivo (1).png"></a>
 
 			<a href="https://law.vanderbilt.edu/academics/academic-programs/law-and-innovation/activities.php"
 				target="_blank"><img src="images/collabs/vanderbilt.png"></a>
+			<a href="https://www.newcastle.edu.au/" target="_blank"><img
+					src="images/collabs/University of Newcastle (Australia).jpg"></a>
 			<a href="https://www.nulawlab.org/" target="_blank"><img src="images/collabs/nu-law.png"></a>
 
 
@@ -684,6 +692,12 @@
 			</a>
 			<a href="https://legaldesignsummit.com" target="_blank">
 				<img src="images/collabs/RTK logo (Peegi Kaibald).png" alt="RTK" class="large-logo" />
+			</a>
+			<a href="https://legaldesignsummit.com" target="_blank">
+				<img src="images/collabs/Jaramillo Villamizar SAS (1).jpg" alt="RTK" class="large-logo" />
+			</a>
+			<a href="https://legaldesignsummit.com" target="_blank">
+				<img src="images/collabs/EdgertonRiley-full(Peter Hornsby).png" alt="RTK" class="large-logo" />
 			</a>
 
 			<a href="https://www.linkedin.com/in/olive-mumbo-72ba2059/" target="_blank">
