building code of conduct

--- a/index.html
+++ b/index.html
@@ -699,9 +699,14 @@
 			<a href="https://legaldesignsummit.com" target="_blank">
 				<img src="images/collabs/EdgertonRiley-full(Peter Hornsby).png" alt="RTK" class="large-logo" />
 			</a>
-
-			<a href="https://www.linkedin.com/in/olive-mumbo-72ba2059/" target="_blank">
-				<img src="images/collabs/OliveHarbor Global Solutions.png" alt="Olive Harbor" class="large-logo" />
+			<a href="https://www.aho.no/english/" target="_blank">
+				<img src="images/collabs/Oslo School of Architecture & Design.png" alt="OSAD" class="large-logo" />
+			</a>
+			<a href="https://legaldesignsummit.com" target="_blank">
+				<img src="images/collabs/EdgertonRiley-full(Peter Hornsby).png" alt="RTK" class="large-logo" />
+			</a>
+			<a href="#" target="_blank">
+				<img src="images/collabs/Public Legal Design.PNG" alt="Olive Harbor" class="large-logo" />
 			</a>
 			<a href="https://www.lawtoons.in/" target="_blank">
 				<img src="images/collabs/Lawtoons.jpg" alt="Lawtoons" class="large-logo" />
