--- a/speakers.html
+++ b/speakers.html
@@ -543,11 +543,11 @@
         name: "Jenni Hakkarainen",
         position: "Postdoctoral Researcher, Institute of Criminology and Legal Policy, University of Helsinki",
 
-        image: "#",
+        image: "images/speakers/2025/Jenni Hakkarainen.jpg",
         linkedin: "https://www.linkedin.com/in/jenni-hakkarainen-759107162/",
-        bio: "",
+        bio: "Jenni is a postdoctoral researcher at the University of Helsinki. Currently she works at the faculty of Social sciences, Institute of criminology and legal policy. She is also a researcher at the Legal Tech Lab. Her teaching and research focuses on socio-legal approach on technology, access to justice and technology regulation.",
         sessions: [
-          { day: "DAY 1 - Thursday", title: "TBC" }
+          { day: "DAY 1 - Thursday", title: "Lawmaker as Designer" }
         ]
       },
       {
@@ -729,6 +729,7 @@
         linkedin: "https://www.linkedin.com/in/ebrumetin/",
         bio: "Ebru is a Doctoral Researcher at Tallinn University of Technology and Coordinator of the TalTech Legal Lab, as part of TalTech Law School. Her interdisciplinary research explores how legal design can reduce regulatory complexity, making corporate sustainability frameworks more accessible, actionable, and effective for businesses, policymakers, and stakeholders. She is also the Founder of award-winning social enterprise, Legal Design Turkey, that had successfully carried out two legal information design projects with UNDP Turkey (2021) and UN Women (2024). Her work has been recognized internationally, including awards/honours from the UNDP Social Innovation Support Programme (2021), the British Council (2022), Euclid Network (2022), International Legal Technology Association (2022) and US Department of State/Vital Voices (2022).",
         sessions: [
+          { day: "Wednesday - BrainFactory Day!", title: "Legal Design for Sustainability" },
           { day: "DAY 2 - Friday", title: "Opening keynote: Dear Business: You Can’t Spell Sustainability Without Human Rights and Legal Design" }
         ]
       },
