publish atas picture

--- a/about-us.html
+++ b/about-us.html
@@ -119,6 +119,16 @@
             <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/lotta-pettersson-528477201/"
                 class="icon linkedin">LinkedIn</a></span></p>
           </div>
+          <div class="col-md-4">
+            <h3 style="font-size: 25px;">Communications<br><br></h3>
+            <div class="image"><a href="mailto:ata.meric@legaldesignsummit.com"><img
+                  src="images/speakers/2025/Ata Meric.JPG"
+                  style="border-radius: 50%; filter: grayscale(100%); width: 100%; aspect-ratio: 1/1; object-fit: cover;"></a>
+            </div>
+            <p>Ata Meriç Tarhan<br><span class="small"></p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/atamerictarhan/"
+                class="icon linkedin">LinkedIn</a></span></p>
+          </div>
 
           <div class="col-md-4">
             <h3 style="font-size: 25px;">Speakers<br><br></h3>
