--- a/program.html
+++ b/program.html
@@ -607,13 +607,16 @@
               <div class="menu-toggler">Menu<span class="icon"></span></div>
               <div class="menu-container">
                 <ul class="menu">
-                  <li class=" first"><a href="index.html">Home</a></li>
-                  <li class=" first"><a href="brainfactory.html">Brainfactory workshops</a></li>
-                  <li class=""><a href="program.html">Program</a></li>
-                  <li class=""><a href="speakers.html">Speakers</a></li>
-                  <li class=""><a href="about-us.html">Meet the team</a></li>
-                  <li class=""><a href="tickets.html">Tickets</a></li>
-                  <li class=" last"><a href="why-attend.html">History</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="brainfactory.html">BrainFactory</a></li>
+                  <li><a href="program.html">Program</a></li>
+                  <li><a href="tickets.html">Tickets</a></li>
+                  <li><a href="speakers.html">Speakers</a></li>
+
+                  <li><a href="about-us.html">Meet the Team</a></li>
+                  <li><a href="values.html">Values</a></li>
+
+                  <li><a href="blog.html">Blog</a></li>
                 </ul>
               </div>
             </div>
