update speaker info

--- a/speakers.html
+++ b/speakers.html
@@ -863,11 +863,11 @@
       {
         section: "Challenging Tradition through Innovation",
         name: "Tiago Guerreiro",
-        position: "",
+        position: "Lawyer, PLMJ",
 
         image: "images/speakers/2025/Tiago Guerreiro_crop.jpg",
         linkedin: "https://www.linkedin.com/in/tflguerreiro/",
-        bio: "A few years ago, Tiago boldly wrote on a résumé: “designer of legal solutions.” It sounded odd, but he was a litigation lawyer who had just launched a design company – so why not? Law in Portugal was still black-and-white, and design wasn’t even on its radar. Then Tiago came across legal design, and everything clicked. Now, he tries to add that pinch of salt to law, making the legal system better for its users – everyone. Off the clock, Tiago is just a guy who enjoys life’s simple pleasures and doesn’t take it too seriously.",
+        bio: "Tiago is lawyer specialized in litigation and social economy. A few years ago, Tiago boldly wrote on a résumé: “designer of legal solutions.” It sounded odd, but he was a litigation lawyer who had just launched a design company – so why not? Law in Portugal was still black-and-white, and design wasn’t even on its radar. Then Tiago came across legal design, and everything clicked. Now, he tries to add that pinch of salt to law, making the legal system better for its users – everyone.",
         sessions: [
           { day: "DAY 2 - Friday", title: "Fireside chat: From Primary School to University: How Legal Design can Redesign Legal Literacy and Education" }
         ]
@@ -875,7 +875,7 @@
       {
         section: "Challenging Tradition through Innovation",
         name: "Peegi Kaibald",
-        position: "Designer, State Shared Service Centre, Estonian Ministry of Finance (RTK)",
+        position: "Service Designer, State Shared Service Centre of Estonia (RTK)",
 
         image: "images/speakers/2025/Peegi Kaibald.jpg",
         linkedin: "https://www.linkedin.com/in/peegi-kaibald/",
