--- a/program.html
+++ b/program.html
@@ -928,9 +928,8 @@
             <div class="session-header" onclick="toggleSession(this)">
               <div class="time-slot">13:05–13:35</div>
               <div class="session-content">
-                <div class="session-title">Fireside chat: Designing with, not for: Revisioning Justice as
-                  Trauma-Informed
-                  and Person-Centered
+                <div class="session-title">Designing with, not for: Revisioning Justice as Trauma-Informed and
+                  Person-Centered
                 </div>
                 <div class="session-speaker"><strong>Coming soon...</strong>
                 </div>
